# AvisSense

./: .gitignore  README.md  Untitled.ipynb  app.py  pyproject.toml
api/: main.py
frontend/: index.html  script.js  style.css
model/saved_model/: config.json  tokenizer.json
notebooks/: avis_sense_training.ipynb
scripts/: generate_metrics_plots.py  predict.py  train.py
src/: predict.py
